--- a/seer/index.html
+++ b/seer/index.html
@@ -962,10 +962,9 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Document.svg" alt="icon">
                         <div class="blankHXS"></div>
-                        <h5> <strong> Create keywords </strong> </h5>
+                        <h5> <strong> Setup the keywords </strong> </h5>
                         <ul>
-                          <li> Create keywords</li>
-                          <li> Save keywords </li>
+                          <li> Monitor the data according to the user's requirements</li>
                         </ul>
                       </div>
                     </div>
@@ -978,12 +977,14 @@
 
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
-                        <img class="iconM" src="icon_Alert.svg" alt="icon">
+                        <img class="iconM" src="icon_Chart.svg" alt="icon">
 
                         <div class="blankHXS"></div>
-                        <h5> <strong> Notification </strong> </h5>
+                        <h5> <strong> Display data </strong> </h5>
                         <ul>
-                          <li> Keywords notification setting</li>
+                          <li>Clear and concise data presentation</li>
+                          <li> Information is easily accessible </li>
+
                         </ul>
                       </div>
                     </div>
@@ -993,12 +994,12 @@
                   <div class="element">
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
-                        <img class="iconM" src="icon_Compare.svg" alt="icon">
+                        <img class="iconM" src="icon_Data.svg" alt="icon">
+
                         <div class="blankHXS"></div>
                         <h5> <strong> Data Comparison </strong> </h5>
                         <ul>
-                          <li> Save results</li>
-                          <li> Compare result side by side</li>
+                          <li> Retrieve data within a specified timeframe</li>
                         </ul>
                       </div>
                     </div>
@@ -1012,14 +1013,11 @@
                   <div class="element">
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
-                        <img class="iconM" src="icon_Chart.svg" alt="icon">
+                        <img class="iconM" src="icon_Alert.svg" alt="icon">
                         <div class="blankHXS"></div>
-                        <h5> <strong> Dashboard </strong> </h5>
+                        <h5> <strong> New keyword feed alert </strong> </h5>
                         <ul>
-                          <li> Table - </li>
-                          <li> Pie Charts - </li>
-                          <li>Line Graphs - time and change</li>
-                          <li>Bar Charts</li>
+                          <li>Stay informed of all developments regarding [keyword].</li>
                         </ul>
                       </div>
                     </div>
@@ -1031,10 +1029,10 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Data.svg" alt="icon">
                         <div class="blankHXS"></div>
-                        <h5> <strong>Data explore/drill down </strong> </h5>
+                        <h5> <strong>Identify the distinctive data </strong> </h5>
                         <ul>
-                          <li> From overall data view to the details</li>
-                          <li> Filter the data to get more details</li>
+                          <li> Data drill down</li>
+                          <li> Data explore</li>
                         </ul>
                       </div>
                     </div>
@@ -1049,7 +1047,7 @@
                         <div class="blankHXS"></div>
                         <h5> <strong> Export Data </strong> </h5>
                         <ul>
-                          <li> Export data share with team</li>
+                          <li>Export data share with team</li>
 
                         </ul>
                       </div>
@@ -1080,42 +1078,40 @@
             <div class="blankHS"></div>
 
             <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--cols-7">
+              <div class="Grid Grid--gutters Grid--cols-4">
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="elementInner cardSEER heightM">
                       <img class="iconM" src="icon_User.svg" alt="icon">
                       <div class="blankHXS"></div>
-                      <h5> <strong> User create keywords
-                        </strong> </h5>
-
+                      <h5> <strong> User create keywords</strong> </h5>
                       <ul>
                         <li>Input keywords</li>
                         <li>Save keywords</li>
                       </ul>
+                      <div class="blankHXS"></div>
+                      <img class="iconXS" src="arrowFatS.svg" alt="icon">
                     </div>
                   </div>
-
                 </div>
-                <img class="iconS" src="arrowFatS.svg" alt="icon">
+
 
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="elementInner cardSEER heightM">
                       <img class="iconM" src="icon_Monitor.svg" alt="icon">
-                      <div class="blankHXS"></div>
-                      <h5> <strong>Queries Reddit post API
-                        </strong> </h5>
 
+                      <div class="blankHXS"></div>
+                      <h5> <strong>Queries Reddit post API </strong> </h5>
                       <ul>
                         <li>Keywords</li>
                         <li>Sentiment score</li>
-
                       </ul>
+                      <div class="blankHXS"></div>
+                      <img class="iconXS" src="arrowFatS.svg" alt="icon">
                     </div>
                   </div>
                 </div>
-                <img class="iconS" src="arrowFatS.svg" alt="icon">
 
                 <div class="Grid-cell">
                   <div class="element">
@@ -1124,19 +1120,20 @@
 
                       <div class="blankHXS"></div>
 
-                      <h5> <strong> Label posts based on keywords
+                      <h5> <strong> Label posts via keywords
                         </strong> </h5>
 
                       <ul>
-                        <li> Determine post has keywords
+                        <li> Determine keywords
                         </li>
-                        <li>Determine sentiment score
+                        <li>Sentiment score
                         </li>
                       </ul>
+                      <div class="blankHXS"></div>
+                      <img class="iconXS" src="arrowFatS.svg" alt="icon">
                     </div>
                   </div>
                 </div>
-                <img class="iconS" src="arrowFatS.svg" alt="icon">
 
                 <div class="Grid-cell">
                   <div class="element">
@@ -1144,13 +1141,13 @@
                       <img class="iconM" src="icon_User.svg" alt="icon">
 
                       <div class="blankHXS"></div>
-                      <h5> <strong> View dashboard
-                        </strong> </h5>
+                      <h5> <strong> View dashboard</strong> </h5>
                       <ul>
                         <li> Visualize data </li>
-                        <li> Customize data chart
-                        </li>
+                        <li> Customize data chart </li>
                       </ul>
+                      <div class="blankHXS"></div>
+                      <img class="iconXS" src="arrowFatS.svg" alt="icon">
                     </div>
                   </div>
                 </div>
