--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
       <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active greenNav"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
           </li>
-          <li class="nav-item inactive "><a href="/architecture"
+          <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive "><a href="/photography"
+          <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about"
+          <li class="nav-item inactive marginZero"><a href="/about"
               class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
