--- a/about/index.html
+++ b/about/index.html
@@ -174,15 +174,15 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
+          <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item inactive"><a href="/architecture"
+          <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive"><a href="/photography"
+          <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item active greenNav"><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item active greenNav marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
