--- a/architecture/index.html
+++ b/architecture/index.html
@@ -132,15 +132,15 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
+          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item active greenNav"><a href="/architecture"
+          <li class="nav-item active greenNav marginZero"><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive "><a href="/photography"
+          <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about"
+          <li class="nav-item inactive marginZero"><a href="/about"
               class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
