--- a/photography/index.html
+++ b/photography/index.html
@@ -142,15 +142,15 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/"
+          <li class="nav-item inactive marginZero"><a href="/"
               class="nav-link box font300-1080">PROJECT</a></li>
-          <li class="nav-item inactive"><a href="/architecture"
-              class="nav-link box font300-1080">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item active greenNav"><a href="/photography"
+          <li class="nav-item active greenNav marginZero"><a href="/photography"
               class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive"><a href="/about" class="nav-link box font300-1080">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080">ABOUT</a></li>
         </ul>
       </div>
 
