--- a/seer/index.html
+++ b/seer/index.html
@@ -128,13 +128,13 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active seer"><a href="/" class="nav-link box">PROJECT</a></li>
-          <li class="nav-item inactive "><a href="/architecture"
+          <li class="nav-item active seer marginZero"><a href="/" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive "><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
