--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -4,7 +4,10 @@
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
 
-
+  <title>Vicky W. | Product Designer | UI/UX Designer | Narrow stripes</title>
+  <meta name="keywords"
+    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
+  <meta name="author" content="Vicky Wang">
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
@@ -115,20 +118,22 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
+  <nav class="header" id="header">
     <div class="backgroundColorNav">
-
-      <a href="http://vickywang.me/" class="logo pointer">VW
-      </a>
-
+      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive box"><a href="/project" class="nav-link">PROJECT</a></li>
-          <li class="nav-item active box"><a href="/architecture" class="nav-link">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item inactive box"><a href="/photography" class="nav-link">PHOTOGRAPHY</a>
+          <li class="nav-item active greenNav marginZero"><a href="/architecture"
+              class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive box"><a href="/" class="nav-link">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/about"
+              class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
       </div>
 
@@ -138,7 +143,6 @@
         <span class="bar"></span>
       </div>
     </div>
-
   </nav>
   <!-- header -->
   <div class="blankHL"></div>
