--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -2,6 +2,15 @@
 
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky W. | Product Designer | UI/UX Designer | Recreation Commons</title>
+  <meta name="keywords"
+    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
+  <meta name="author" content="Vicky Wang">
+
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
 
@@ -116,18 +125,24 @@
   </div>
   <!--progressBarScroll-->
   <!-- header -->
-  <nav class="header">
+  <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer">VW
-      </a>
+
+      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive box"><a href="/project" class="nav-link">PROJECT</a></li>
-          <li class="nav-item active box"><a href="/architecture" class="nav-link">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item inactive box"><a href="/photography" class="nav-link">PHOTOGRAPHY</a>
+          <li class="nav-item active greenNav marginZero"><a href="/architecture"
+              class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive box"><a href="/" class="nav-link">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/photography"
+              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/about"
+              class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
       </div>
 
