--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -1,6 +1,14 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky W. | Product Designer | UI/UX Designer | The rotation of curves</title>
+  <meta name="keywords"
+    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
+  <meta name="author" content="Vicky Wang">
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
 
@@ -120,12 +128,12 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive box"><a href="/project" class="nav-link">PROJECT</a></li>
-          <li class="nav-item active box"><a href="/architecture" class="nav-link">ARCHITECTURE</a>
+          <li class="nav-item inactive box marginZero"><a href="/project" class="nav-link">PROJECT</a></li>
+          <li class="nav-item active box marginZero"><a href="/architecture" class="nav-link">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive box"><a href="/photography" class="nav-link">PHOTOGRAPHY</a>
+          <li class="nav-item inactive box marginZero"><a href="/photography" class="nav-link">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive box"><a href="/" class="nav-link">ABOUT</a></li>
+          <li class="nav-item inactive box marginZero"><a href="/" class="nav-link">ABOUT</a></li>
         </ul>
       </div>
 
