--- a/about/index.html
+++ b/about/index.html
@@ -170,7 +170,7 @@
     <div class="backgroundColorNav">
 
 
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -220,12 +220,12 @@
     </div>
     <div class="Grid Grid--full">
       <div class="Grid-cel colorGrey">
-        <h3>I’m a UI/UX designer with a background in <a href="/architecture/"
-            class="textUnderline colorGrey">architecture</a></h3>
-        <h3>broad skill set developed in a startup environment</h3>
-        <h3>with deep engagement in all stages of the design process</h3>
-        <h3>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
-            target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h3>
+        <h4>I’m a UI/UX designer with a background in <a href="/architecture/"
+            class="textUnderline colorGrey">architecture</a></h4>
+        <h4>broad skill set developed in a startup environment</h4>
+        <h4>with deep engagement in all stages of the design process</h4>
+        <h4>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
+            target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h4>
       </div>
     </div>
   </div>
@@ -583,7 +583,7 @@
   <!--footer-->
   <div class="colorBgGrey">
     <div class="footer">
-      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
