--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -120,7 +120,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
