--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -186,8 +186,8 @@
     </div>
     <div class="Grid Grid--full">
       <div class="Grid-cell">
-        <h3>I am currently based out of San Francisco</h3>
-        <h3>design for business and consumer-facing websites with a small team</h3>
+        <h4>I am currently based out of San Francisco</h4>
+        <h4>design for business and consumer-facing websites with a small team</h4>
       </div>
     </div>
     <div class="blankHXS"></div>
@@ -274,6 +274,7 @@
       </div>
     </div>
   </div>
+  
   
   <div class="blankHS"></div>
   <!-- Arrow -->
@@ -465,7 +466,7 @@
   <div class="colorBgGrey">
 
     <div class="footer">
-      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
