--- a/architecture/index.html
+++ b/architecture/index.html
@@ -128,7 +128,7 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
 
-      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -447,7 +447,7 @@
   <div class="colorBgGrey">
 
     <div class="footer">
-      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
