--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -136,13 +136,13 @@
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active "><a href="/project" class="nav-link box">PROJECT</a></li>
+          <li class="nav-item active "><a href="/" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"
               class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive "><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/" class="nav-link box">ABOUT</a></li>
+          <li class="nav-item inactive "><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
 
