--- a/photography/index.html
+++ b/photography/index.html
@@ -138,7 +138,7 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
 
-    <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+    <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -615,7 +615,7 @@
   <div class="colorBgGrey">
 
     <div class="footer">
-      <p class="footer-left"> &#169; 2022 &#8212; VICKY WANG
+      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
