--- a/photography/index.html
+++ b/photography/index.html
@@ -49,48 +49,48 @@
   <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
   <link
-  href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-  rel="stylesheet">
-<!--sitewide font-family: 'Lato', sans-serif; -->
-<link
-  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-  rel="stylesheet">
-<!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-<!--special font-family: 'Train One'; -->
-<link
-  href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-  rel="stylesheet">
-<!--special font-family: 'Titillium Web', sans-serif; -->
-<link
-  href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet">
-<!--special font-family: 'Catamaran', sans-serif; -->
-<link
-  href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-  rel="stylesheet">
-<!-- handwriting - Hi Melody-->
-<link
-  href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
-  rel="stylesheet">
-<!-- handwriting - shadows into light-->
-<link
-  href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-  rel="stylesheet">
-<!-- handwriting - font-family: Maven Pro; -->
-<link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-  rel="stylesheet">
-<!--handwriting - font-family: La Belle Aurore; -->
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--special font-family: 'Train One'; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Titillium Web', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--special font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - Hi Melody-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - shadows into light-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- handwriting - font-family: Maven Pro; -->
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: La Belle Aurore; -->
 
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-  rel="stylesheet">
-<!--handwriting - font-family: 'Caveat'; -->
-<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-<!--handwriting - font-family: 'Caveat Brush', cursive; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-  rel="stylesheet">
-<!--font awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    rel="stylesheet">
+  <!--font awesome -->
 
 
 
@@ -107,14 +107,14 @@
     src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
 
-  
+
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-    <!-- google analytics-->
+  <!-- google analytics-->
 
-  
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -137,30 +137,33 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-
-    <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
-
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/"
-              class="nav-link box font300-1080">PROJECT</a></li>
+          <li class="nav-item inactive greenNav marginZero"><a href="/"
+              class="nav-link box">PROJECT</a>
+          </li>
           <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item active greenNav marginZero"><a href="/photography"
-              class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item active marginZero"><a href="/photography"
+              class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080">ABOUT</a></li>
+          <li class="nav-item inactive marginZero"><a href="/about"
+              class="nav-link box font300-1080 ">ABOUT</a>
+          </li>
         </ul>
       </div>
-
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-      </div></div>
-   </nav>
+      </div>
+    </div>
+  </nav>
   <!-- header -->
+
+
 
   <div class="blankHM"></div>
   <!--intro-->
