--- a/appointa/index.html
+++ b/appointa/index.html
@@ -148,24 +148,31 @@
     </div>
   </div>
   <!--progressBarScroll-->
-  <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/" class="logo pointer colorAPPOINTA">VW
       </a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item active APPOINTA"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
+
+            <div class="dropdown-content">
+
+
+
+              <a href="#">SEER</a>
+              <a href="#">APPOINTA</a>
+            </div>
           </li>
-          <li class="nav-item inactive"><a href="/architecture"
-              class="nav-link box font300-1080">ARCHITECTURE</a>
+
+
+
+          <li class="nav-item inactive marginZero"><a href="/architecture"
+              class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive "><a href="/about"
-              class="nav-link box  font300-1080">ABOUT</a>
-          </li>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
       <div class="hamburger">
@@ -175,6 +182,8 @@
       </div>
     </div>
   </nav>
+  <!-- header -->
+
   <!-- Working process -->
   <div class="colorBgAPPOINTA">
     <div class="blankPhone"></div>
@@ -185,7 +194,7 @@
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
       </div>
     </div>
 
@@ -194,7 +203,7 @@
       <img class="displayTablet" src="MockupS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
         <div class="blankHXS"></div>
       </div>
     </div>
@@ -203,7 +212,7 @@
       <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
-          target="_blank"> <button class="button-35 APPOINTA">Slide Deck</button></a>
+          target="_blank"> <button class="button-35 APPOINTA">Slide Decks</button></a>
         <div class="blankHXS"></div>
 
       </div>
@@ -1540,7 +1549,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Information architecture</p>
+                    <p class="tArrow"> Site Map</p>
                     <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -2241,7 +2250,7 @@
             <li class="rightPanel"><a href="#priorityMatrix"> Priority matrix</a></li>
             <li class="rightPanel"><a href="#useTypes">Personas</a></li>
             <li class="rightPanel"><a href="#userFlow">User flow </a></li>
-            <li class="rightPanel"><a href="#informationArchitecture">Information architecture</a>
+            <li class="rightPanel"><a href="#informationArchitecture">Site Map</a>
             </li>
             <li class="rightPanel"><a href="#sketch">Lo-fi sketch</a></li>
             <li class="rightPanel"><a href="#mfScreens">Mid-fi screen flow &#38; testing </a></li>
