--- a/appointa/index.html
+++ b/appointa/index.html
@@ -61,8 +61,7 @@
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Catamaran', sans-serif; -->
   <link
@@ -73,24 +72,20 @@
     href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <!-- handwriting - shadows into light-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
   <!--handwriting - font-family: La Belle Aurore; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat'; -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -111,13 +106,10 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <!--jQuery 07182022-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -155,20 +147,28 @@
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
-
             <div class="dropdown-content">
-
-
-
-              <a href="#">SEER</a>
-              <a href="#">APPOINTA</a>
+              <a href="/seer/">
+                <div class="cardBorder SEER">
+                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <div class="element">
+                    <h5 class="colorBlack">SEER | For grow business</h5>
+                  </div>
+                </div>
+              </a>
+              <a href="/seer/">
+                <div class="cardBorder SEER">
+                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <div class="element">
+                    <h5 class="colorBlack">SEER | For grow business</h5>
+                  </div>
+                </div>
+              </a>
             </div>
           </li>
 
 
-
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
@@ -951,8 +951,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <img class="modal-target" src="diagram_customerJourneyMap.png"
-                      alt="Pain points">
+                    <img class="modal-target" src="diagram_customerJourneyMap.png" alt="Pain points">
                   </div>
                 </div>
               </div>
@@ -1115,8 +1114,7 @@
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="Grid">
-                      <img class="modal-target" src="diagram_affinityDiagrams.svg"
-                        alt="Affinity Map">
+                      <img class="modal-target" src="diagram_affinityDiagrams.svg" alt="Affinity Map">
 
                     </div>
                   </div>
@@ -1338,8 +1336,8 @@
                         directly</strong> from a place such as a calendar?</p>
                     <p>&#8230;let recruiters find <strong class="textDecor APPOINTA">interviewers'
                         skill</strong> easily?</p>
-                    <p>&#8230;let the recruiting team know some colleges are <strong
-                        class="textDecor APPOINTA">not available</strong> for appointments?</p>
+                    <p>&#8230;let the recruiting team know some colleges are <strong class="textDecor APPOINTA">not
+                        available</strong> for appointments?</p>
                     <p>&#8230;let the <strong class="textDecor APPOINTA">team use shared time
                         slots</strong> that all team members can access?</p>
                     <p>&#8230;let the recruiter <strong class="textDecor APPOINTA">share the
@@ -1383,8 +1381,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <img class="modal-target" src="diagram_priorityMatrix.svg"
-                      alt="Priority matrix">
+                    <img class="modal-target" src="diagram_priorityMatrix.svg" alt="Priority matrix">
 
                   </div>
                 </div>
@@ -1434,8 +1431,7 @@
                     <div class="Grid-cell">
                       <div class="element">
                         <div class="elementInner cardAPPOINTA heightM">
-                          <img class="iconM" src="ppl_recruiter.png"
-                            alt="Hiring managers, HR, Recruiters">
+                          <img class="iconM" src="ppl_recruiter.png" alt="Hiring managers, HR, Recruiters">
 
                           <div class="blankHXS"></div>
                           <h5> <strong> Recruiters &#47; Hiring managers </strong> </h5>
@@ -1562,8 +1558,7 @@
           <div class="Grid Grid--full u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="diagram_informationArchitecture_V1.svg"
-                  alt="Sitemap">
+                <img class="shadowFilter modal-target" src="diagram_informationArchitecture_V1.svg" alt="Sitemap">
               </div>
             </div>
           </div>
@@ -1664,8 +1659,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="shadowFilter modal-target" src="userflow_Member_signup.svg"
-                    alt="Log in or sign up">
+                  <img class="shadowFilter modal-target" src="userflow_Member_signup.svg" alt="Log in or sign up">
                 </div>
               </div>
             </div>
@@ -1684,8 +1678,8 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="shadowFilter modal-target"
-                    src="userflow_Recruiter_createInterview.svg" alt="Log in or sign up">
+                  <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
+                    alt="Log in or sign up">
                 </div>
               </div>
             </div>
@@ -1700,14 +1694,13 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img src="diagram_keyFlows_horizontal_schedulingInterview.svg"
-                    alt="Schedule interview">
+                  <img src="diagram_keyFlows_horizontal_schedulingInterview.svg" alt="Schedule interview">
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="shadowFilter modal-target"
-                    src="userflow_Recruiter_scheduleInterview.svg" alt="Log in or sign up">
+                  <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduleInterview.svg"
+                    alt="Log in or sign up">
                 </div>
               </div>
             </div>
@@ -1804,8 +1797,8 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="shadowFilter modal-target"
-                    src="userflow_Recruiter_teamManagementV2.svg" alt="Log in or sign up">
+                  <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagementV2.svg"
+                    alt="Log in or sign up">
                 </div>
               </div>
             </div>
@@ -1823,14 +1816,13 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img src="diagram_keyFlows_horizontal_schedulingInterviewV2.svg"
-                    alt="Schedule interview">
+                  <img src="diagram_keyFlows_horizontal_schedulingInterviewV2.svg" alt="Schedule interview">
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <img class="shadowFilter modal-target"
-                    src="userflow_Recruiter_scheduleInterviewV2.svg" alt="Log in or sign up">
+                  <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduleInterviewV2.svg"
+                    alt="Log in or sign up">
                 </div>
               </div>
             </div>
@@ -1978,8 +1970,8 @@
                 </div>
 
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA shadowBox"
-                      src="hi-fi_interviewType.gif" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewType.gif"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -1998,8 +1990,7 @@
                 </div>
 
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA shadowBox"
-                      src="hi-fi_interviewSet.gif" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSet.gif" alt="New User">
                   </div>
                 </div>
               </div>
@@ -2019,8 +2010,8 @@
                 </div>
 
                 <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA shadowBox"
-                      src="hi-fi_interviewTeam.gif" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewTeam.gif"
+                      alt="New User">
                   </div>
                 </div>
               </div>
@@ -2042,8 +2033,8 @@
 
                 <div class="Grid-cell">
 
-                  <div class="element"> <img class="cardAPPOINTA shadowBox"
-                      src="hi-fi_interviewSkills.gif" alt="New User">
+                  <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSkills.gif"
+                      alt="New User">
                   </div>
                 </div>
               </div>
